[gd_scene load_steps=2 format=3 uid="uid://c53414078170s"]

[ext_resource type="Script" path="res://Scripts/Menus/route_selection_menu.gd" id="1_84q0y"]

[node name="RouteSelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_84q0y")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 75.0
offset_top = 50.0
offset_right = -75.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MainVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Journey Details"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainVBox"]
layout_mode = 2

[node name="ColumnsHBox" type="HBoxContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="LeftColumn" type="VBoxContainer" parent="MainVBox/ColumnsHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ResourceExpensesLabel" type="Label" parent="MainVBox/ColumnsHBox/LeftColumn"]
layout_mode = 2
text = "Resource Expenses"
horizontal_alignment = 1

[node name="ExpensesGrid" type="GridContainer" parent="MainVBox/ColumnsHBox/LeftColumn"]
layout_mode = 2
theme_override_constants/h_separation = 10
columns = 2

[node name="FuelLabel" type="Label" parent="MainVBox/ColumnsHBox/LeftColumn/ExpensesGrid"]
layout_mode = 2
text = "Fuel Expense:"

[node name="FuelValue" type="Label" parent="MainVBox/ColumnsHBox/LeftColumn/ExpensesGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "N/A"
horizontal_alignment = 2

[node name="WaterLabel" type="Label" parent="MainVBox/ColumnsHBox/LeftColumn/ExpensesGrid"]
layout_mode = 2
text = "Water Expense:"

[node name="WaterValue" type="Label" parent="MainVBox/ColumnsHBox/LeftColumn/ExpensesGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "N/A"
horizontal_alignment = 2

[node name="FoodLabel" type="Label" parent="MainVBox/ColumnsHBox/LeftColumn/ExpensesGrid"]
layout_mode = 2
text = "Food Expense:"

[node name="FoodValue" type="Label" parent="MainVBox/ColumnsHBox/LeftColumn/ExpensesGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "N/A"
horizontal_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="MainVBox/ColumnsHBox/LeftColumn"]
layout_mode = 2

[node name="VehicleExpensesLabel" type="Label" parent="MainVBox/ColumnsHBox/LeftColumn"]
layout_mode = 2
text = "Vehicle Energy"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MainVBox/ColumnsHBox/LeftColumn"]
layout_mode = 2
size_flags_vertical = 3

[node name="VehicleExpensesVBox" type="VBoxContainer" parent="MainVBox/ColumnsHBox/LeftColumn/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlaceholderLabel" type="Label" parent="MainVBox/ColumnsHBox/LeftColumn/ScrollContainer/VehicleExpensesVBox"]
layout_mode = 2
text = "Vehicle expenses loading..."
horizontal_alignment = 1

[node name="RightColumn" type="VBoxContainer" parent="MainVBox/ColumnsHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="JourneyDetailsLabel" type="Label" parent="MainVBox/ColumnsHBox/RightColumn"]
layout_mode = 2
text = "Journey Details"
horizontal_alignment = 1

[node name="DetailsGrid" type="GridContainer" parent="MainVBox/ColumnsHBox/RightColumn"]
layout_mode = 2
theme_override_constants/h_separation = 10
columns = 2

[node name="DestinationLabel" type="Label" parent="MainVBox/ColumnsHBox/RightColumn/DetailsGrid"]
layout_mode = 2
text = "Destination üìç:"

[node name="DestinationValue" type="Label" parent="MainVBox/ColumnsHBox/RightColumn/DetailsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "N/A"
horizontal_alignment = 2

[node name="DistanceLabel" type="Label" parent="MainVBox/ColumnsHBox/RightColumn/DetailsGrid"]
layout_mode = 2
text = "Distance üó∫Ô∏è:"

[node name="DistanceValue" type="Label" parent="MainVBox/ColumnsHBox/RightColumn/DetailsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "N/A"
horizontal_alignment = 2

[node name="ETALabel" type="Label" parent="MainVBox/ColumnsHBox/RightColumn/DetailsGrid"]
layout_mode = 2
text = "ETA ‚è∞:"

[node name="ETAValue" type="Label" parent="MainVBox/ColumnsHBox/RightColumn/DetailsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "N/A"
horizontal_alignment = 2
autowrap_mode = 2

[node name="HSeparator4" type="HSeparator" parent="MainVBox"]
layout_mode = 2

[node name="ButtonsHBox" type="HBoxContainer" parent="MainVBox"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="MainVBox/ButtonsHBox"]
layout_mode = 2
text = "Cancel"

[node name="EmbarkButton" type="Button" parent="MainVBox/ButtonsHBox"]
layout_mode = 2
text = "Embark"
